<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/calcula"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        app:srcCompat="@drawable/mujer" />

    <TextView
        android:id="@+id/txt_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/peso"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txt_estatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/masa"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/estatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:backgroundTint="@android:color/holo_purple"
        android:fontFamily="casual"
        android:onClick="calcular"
        android:text="@string/bot_calc"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:backgroundTint="@android:color/holo_purple"
        android:fontFamily="casual"
        android:onClick="acerca"
        android:text="@string/bot_about"
        android:textSize="18sp" />
</LinearLayout>


